--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="es">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
  <title>Chat</title>
@@ -6,38 +6,46 @@
  <link rel="stylesheet" href="css/chat.css" >
 </head>
 <body>
+
 	<div class="chat">
+
 		<div class="cab">
-			<div class="container mt-1 ml-0">
-				<div class="row">
-					<div class="col-2 m-0 ">
-						<img src="img/perfil.png" alt="" class="img" height="30">
-					</div>
-					<div class="col-10">
-						<i>Walter Rengifo</i>
-					</div>
-				</div>
-			</div>
+			<span style="float:left;">	<table> <tr>
+					<td> <img src="img/perfil.png" alt="" class="rounded-circle" height="34"> </td>
+					<td> <i>Geral Cotrina</i> <br>
+						<i><small>amigo</small></i>	</td>
+				</tr> </table>
+			</span>
+			<span style="float:right; margin:5px;"> <img src="img/cber-t3.png" alt="" height="25"></span>	
 		</div>
+
 		<div class="textos">	
-			<div class="msjr">
-			  <i>Hola soy Geral.</i>
-			</div>
-			<div class="msjl">
-			   <i>Que tal?</i>
-			</div>
-			<div class="msjr">
-			   <i>Bien gracias, una consulta...</i>
-			</div>
-			<div class="msjl">
-			   <i>si dime</i>
-			</div>
-			<div class="msjr">
-			   <i>The content-box model states that padding and borders don't count in the width that you set for a box. So they add on to its width.</i>
-			</div>
+			<div class="msjl"> <i>Hola somos CBer, comentanos ¿sobre qué producto te gustaría saber más?</i> </div>
+			<div class="msjr"> <i>Hola soy Geral.</i> </div>
+			<div class="msjl"> <i>Que tal?</i> </div>
+			<div class="msjr"> <i>Bien gracias, una consulta...</i> </div>
+			<div class="msjl">  <i>si dime</i> </div>
+			<div class="msjr"> <i>The content-box model states that padding and borders don't count in the width that you set for a box. So they add on to its width.</i></div>
+			<div class="msjl"> <i>Que tal?</i> </div>
+			<div class="msjr"> <i>Bien gracias, una consulta...</i> </div>
+			<div class="msjl"> <i>Que tal?</i> </div>
+			<div class="msjr"> <i>Bien gracias, una consulta...</i> </div>
+			<div class="msjl"> <i>Que tal?</i> </div>
+			<div class="msjr"> <i>Bien gracias, una consulta...</i> </div>
+			<div class="msjl"> <i>Que tal?</i> </div>
+			<div class="msjr"> <i>Bien gracias, una consulta...</i> </div>
+			<div class="msjl"> <i>Que tal?</i> </div>
+			<div class="msjr"> <i>Bien gracias, una consulta...</i> </div>
+			<!--div class="msjl"> <i>Que tal?</i> </div>
+			<div class="msjr"> <i>Bien gracias, una consulta...</i> </div>
+			<div class="msjl"> <i>Que tal?</i> </div>
+			<div class="msjr"> <i>Bien gracias, una consulta...</i> </div>
+			<div class="msjl"> <i>Que tal?</i> </div>
+			<div class="msjr"> <i>Bien gracias, una consulta...</i> </div-->
 		</div>
+
 		<div class="enviar btn-group btn-block h-100">
-			<input type="text" class="btn text-left bg-light"/>
+			<textarea name="txt_send" id="txt_send" cols="30" rows="1" class="btn border"></textarea>
 			<button type="submit" class="btn btn-outline-light">
 				<img src="https://cdn.icon-icons.com/icons2/259/PNG/128/ic_send_128_28719.png" height="30px";>
 			</button>		
