--- a/index.html
+++ b/index.html
@@ -2,10 +2,35 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
  <title>Chat</title>
- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+ <link rel="stylesheet" href="css/bootstrap.min.css">
  <link rel="stylesheet" href="css/chat.css" >
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
+
+	<div class="container">
+		<div class="row mt-4">
+			<div class="col-3 mx-auto btn-group">
+				<button onclick="btn_prueba()" class="btn btn-danger">abajo</button>
+				<a href="#msj001" class="btn btn-success js-scroll-trigger">msj001</a>
+				<button onclick="UltimoMsj()" class="btn btn-info">UltimoMsj</button>
+			</div>
+		</div>
+		<div class="row mt-4">
+			<div class="col-3 mx-auto btn-group">
+				<button onclick="GetLog()" class="btn btn-success">GetLog</button>
+				<button onclick="GetTkn()" class="btn btn-danger">GetTkn</button>
+				<button onclick="begin()" class="btn btn-info">begin</button>
+				<button onclick="createAuthToken()" class="btn btn-light">createAuthToken</button>
+			</div>
+		</div>
+	</div>
+
+
+
+
+
+
 
 	<div class="chat">
 
@@ -19,42 +44,22 @@
 			<span style="float:right; margin:5px;"> <img src="img/cber-t3.png" alt="" height="25"></span>	
 		</div>
 
-		<div class="textos">	
-			<div class="msjl"> <i>Hola somos CBer, comentanos ¿sobre qué producto te gustaría saber más?</i> </div>
-			<div class="msjr"> <i>Hola soy Geral.</i> </div>
-			<div class="msjl"> <i>Que tal?</i> </div>
-			<div class="msjr"> <i>Bien gracias, una consulta...</i> </div>
-			<div class="msjl">  <i>si dime</i> </div>
-			<div class="msjr"> <i>The content-box model states that padding and borders don't count in the width that you set for a box. So they add on to its width.</i></div>
-			<div class="msjl"> <i>Que tal?</i> </div>
-			<div class="msjr"> <i>Bien gracias, una consulta...</i> </div>
-			<div class="msjl"> <i>Que tal?</i> </div>
-			<div class="msjr"> <i>Bien gracias, una consulta...</i> </div>
-			<div class="msjl"> <i>Que tal?</i> </div>
-			<div class="msjr"> <i>Bien gracias, una consulta...</i> </div>
-			<div class="msjl"> <i>Que tal?</i> </div>
-			<div class="msjr"> <i>Bien gracias, una consulta...</i> </div>
-			<div class="msjl"> <i>Que tal?</i> </div>
-			<div class="msjr"> <i>Bien gracias, una consulta...</i> </div>
-			<!--div class="msjl"> <i>Que tal?</i> </div>
-			<div class="msjr"> <i>Bien gracias, una consulta...</i> </div>
-			<div class="msjl"> <i>Que tal?</i> </div>
-			<div class="msjr"> <i>Bien gracias, una consulta...</i> </div>
-			<div class="msjl"> <i>Que tal?</i> </div>
-			<div class="msjr"> <i>Bien gracias, una consulta...</i> </div-->
-		</div>
+		<div id="id_textos" class="textos "></div>
 
-		<div class="enviar btn-group btn-block h-100">
-			<textarea name="txt_send" id="txt_send" cols="30" rows="1" class="btn border"></textarea>
-			<button type="submit" class="btn btn-outline-light">
-				<img src="https://cdn.icon-icons.com/icons2/259/PNG/128/ic_send_128_28719.png" height="30px";>
+		<div class="enviar btn-group btn-block">
+			<textarea name="txt_send" id="id_txt_send" cols="30" rows="1" class="btn border" onkeypress="pulsar(event)"></textarea>
+			<button type="submit" class="btn btn-outline-light" onclick="Enviar()">
+				<img src="img/send.png" height="30px";>
 			</button>		
 		</div>	
 	</div>
 
-
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<!--ARCHIBO DE BD JSON-->
+<!--script language=javascript type="text/javascript" src="js/db.json"></script-->
+<script src="js/db.json"></script>
+<script src="js/chat.js"></script>
+<script src="js/jquery-3.4.1.slim.min.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
